Fixed hidden menu on tablet/mobile

--- a/src/components/RootMenu/style.scss
+++ b/src/components/RootMenu/style.scss
@@ -135,7 +135,7 @@ $medium-screen: #{"min-width: 1025px"};
 
 .MenuWrapper {
   z-index: var(--menu-z-index);
-  display: none;
+  // display: none;
   position: fixed;
   top: 50px;
   left: 0;
